--- a/starter/index.html
+++ b/starter/index.html
@@ -30,6 +30,14 @@
       <button class="btn btn--new">🔄 New game</button>
       <button class="btn btn--roll">🎲 Roll dice</button>
       <button class="btn btn--hold">📥 Hold</button>
+
+      <section>
+        <h4 class="hivemind" id="hivemind">A Hivemind Game</h4>
+        <h3 class="thank-you" id="thank--you">
+          Thanks for playing! Congratulations, you win the pot!
+          <p class="player-winner"></p>
+        </h3>
+      </section>
     </main>
     <script src="script.js"></script>
   </body>
